--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     header {
       text-align: center;
       padding: 80px 20px 40px;
-      background: linear-gradient(135deg, #0d6efd, #6610f2);
+      background: linear-gradient(135deg, #bed8ff, #8b43ff);
       color: white;
     }
     .project-card {
